--- a/src/vivarium_gates_nutrition_optimization/model_specifications/branches/scenarios.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/branches/scenarios.yaml
@@ -1,4 +1,4 @@
-input_draw_count: 100
+input_draw_count: 20
 random_seed_count: 80
 
 branches:
@@ -7,6 +7,6 @@ branches:
         - 'zero_coverage'
         - 'baseline'
         - 'mms'
-        - 'universal_bep'
-        - 'targeted_bep_no_mms'
+        - 'ifa'
+        #- 'targeted_bep_ifa'
         - 'targeted_bep_mms'
