correct stratification syntax

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -60,6 +60,6 @@ configuration:
         default:
             - 'age_group'
         anemia:
-            - 'pregnancy'
+            include: ['pregnancy']
         pregnancy: 
-            - 'pregnancy_outcome'
+            include: ['pregnancy_outcome']
