--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -2,9 +2,9 @@ components:
     vivarium_public_health:
         population:
             - BasePopulation()
-        metrics:
-            - DiseaseObserver("maternal_disorders")
-            - DiseaseObserver("maternal_hemorrhage")
+#        metrics:
+#            - DiseaseObserver("maternal_disorders")
+#            - DiseaseObserver("maternal_hemorrhage")
 
     vivarium_gates_nutrition_optimization:
         components:
@@ -24,8 +24,8 @@ components:
             - BirthRecorder()
             - MaternalMortalityObserver()
             - DisabilityObserver()
-            - AnemiaObserver()
-            - MaternalBMIObserver()
+#            - AnemiaObserver()
+#            - MaternalBMIObserver()
             - MaternalInterventionObserver()
 
 configuration:
@@ -52,14 +52,10 @@ configuration:
             day: 31
         step_size: 7 # Days
     population:
-        population_size: 5_000
+        population_size: 20_000
         initialization_age_min: 10
         initialization_age_max: 54
         include_sex: "Female"
     stratification:
         default:
             - 'age_group'
-        anemia:
-            include: ['pregnancy']
-        pregnancy: 
-            include: ['pregnancy_outcome']
