--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -31,7 +31,7 @@ components:
 configuration:
     input_data:
         input_draw_number: 0
-        artifact_path: '/mnt/team/simulation_science/pub/models/vivarium_gates_nutrition_optimization/artifacts/model10.0/nigeria.hdf'
+        artifact_path: 'src/vivarium_gates_nutrition_optimization/artifacts/ethiopia.hdf'
     interpolation:
         order: 0
         extrapolate: True
