Updates to remove dependencies

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -21,7 +21,7 @@ components:
             - ResultsStratifier()
             - PregnancyObserver()
             - PregnancyOutcomeObserver()
-            - BirthRecorder()
+#            - BirthRecorder()
             - MaternalMortalityObserver()
             - DisabilityObserver()
 #            - AnemiaObserver()
