--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -2,7 +2,7 @@ components:
     vivarium_public_health:
         population:
             - BasePopulation()
-        metrics:
+        results:
             - DiseaseObserver("maternal_disorders")
             - DiseaseObserver("maternal_hemorrhage")
 
@@ -21,7 +21,7 @@ components:
             - ResultsStratifier()
             - PregnancyObserver()
             - PregnancyOutcomeObserver()
-            - BirthRecorder()
+            # - BirthRecorder()
             - MaternalMortalityObserver()
             - DisabilityObserver()
             - AnemiaObserver()
@@ -48,9 +48,9 @@ configuration:
             day: 1
         end:
             year: 2025
-            month: 12
+            month: 3
             day: 31
-        step_size: 7 # Days
+        step_size: 28 # Days
     population:
         population_size: 20_000
         initialization_age_min: 10
