add FullHistoryObserver to model spec

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -1,4 +1,7 @@
 components:
+    vivarium:
+        framework:
+            results: FullHistoryObserver()
     vivarium_public_health:
         population:
             - BasePopulation()
