--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -1,7 +1,8 @@
 components:
     vivarium:
         framework:
-            results: FullHistoryObserver()
+            results:
+                - FullHistoryObserver()
     vivarium_public_health:
         population:
             - BasePopulation()
