--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Note: The lines we will return via grep will look like 'package_name>=#.#.#' or will be of the format 
 # 'package_name @ git+https://github.com/ihmeuw/package_name@SOME_BRANCH'
-vivarium @ git+https://github.com/ihmeuw/vivarium@main
+vivarium>=3.0.0
 vivarium_public_health>=3.0.0
 click
 jinja2
